[package]

name          = "quandl-v3"
version       = "1.0.0"
authors       = ["Damien Levac <damien.levac@gmail.com>"]
description   = "Rust bindings for the Quandl v3 API."
documentation = "http://proksima.github.io/quandl-v3-doc/quandl-v3/index.html"
homepage      = "https://github.com/Proksima/quandl"
repository    = "https://github.com/Proksima/quandl"
readme        = "README.md"
keywords      = ["database", "api", "data", "mining", "quandl"]
license       = "MPL-2.0"

[dependencies]

has = "0.1"
zip = "0.2"
csv = "0.15"
hyper = "0.9"
lazy_static = "0.2"
rustc-serialize = "0.3"

