[package]

name          = "quandl-v3"
version       = "1.2.0"
authors       = ["Damien Levac <damien.levac@gmail.com>"]
description   = "Rust bindings for the Quandl v3 API."
documentation = "http://proksima.github.io/quandl-v3-doc/quandl_v3/index.html"
homepage      = "https://github.com/Proksima/quandl"
repository    = "https://github.com/Proksima/quandl"
readme        = "README.md"
keywords      = ["database", "api", "data", "mining", "quandl"]
license       = "MPL-2.0"
edition       = "2018"

[dependencies]

has           = "0.1"
zip           = "0.2"
reqwest       = { version = "0.10", features = ["blocking", "json"] }
num_cpus      = "1.0"
lazy_static   = "0.2"

csv           = "1.1"
serde         = "1.0"
serde_json    = "1.0"
serde_derive  = "1.0"
